fix : contraste du footer

--- a/style/style.css
+++ b/style/style.css
@@ -94,4 +94,5 @@ footer {
     bottom: 0;
     width: 100%;
     font-size: 14px;
+    background-color: black;
 }
